# hallucination-hunter

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  app.py  env.example  gitignore  golden_dataset.json  hallucination_hunter.py  pyproject.toml  requirements-dev.txt  requirements.txt  v3_ideas.md.txt
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: golden_dataset.json
mnt/user-data/outputs/src/hallucination_hunter/: __init__.py
samples/: test_datasets.md
src/hallucination_hunter/: __init__.py  audit.py  cli.py  errors.py  extraction.py  metrics.py  models.py  pipeline.py  taxonomy.py  verification.py
src/hallucination_hunter/providers/: __init__.py  anthropic.py  base.py  gemini.py  grok.py  groq.py  openai.py
tests/: __init__.py  conftest.py  test_models.py  test_new_providers.py  test_pipeline.py  test_providers.py  test_services.py
ui/: __init__.py  audit.py  styles.py
