[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-hunter"
version = "0.1.0"
description = "Automated hallucination detection and faithfulness scoring for LLM outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Habibullah Bin Mahmud" }]
keywords = ["llm", "evaluation", "hallucination", "rag", "faithfulness", "evalops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "altair>=5.0.0",
]
all-providers = [
    "openai>=1.54.0",
    "anthropic>=0.39.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
]

[project.scripts]
hallucination-hunter = "hallucination_hunter.cli:main"

[project.urls]
Repository = "https://github.com/habibm94/hallucination-hunter"
Issues = "https://github.com/habibm94/hallucination-hunter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src/hallucination_hunter --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/hallucination_hunter"]
omit = ["*/tests/*"]
